# NYTimes-Strands-Solver

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
strandssolver/: gamestate.py
strandssolver/dfs/: deapthfirstsearch.py  depthfirstsearch.py  dfsdepth.py  dfsexceptions.py  dfsvisitor.py  typing.py
strandssolver/models/: dictionary.py  dictionarytrie.py  graph.py
strandssolver/parsers/: Strands_ Uncover words. - The New York Times.html  htmlparser.py  parser.py  screenshotparser.py
strandssolver/parsers/html/: htmlparser.py
strandssolver/readers/: htmlreader.py  reader.py
strandssolver/solver/: dictionary.py  dictionarytrie.py  graph.py  optimizecovering.py  solver.py  strandsdfsvisitor.py
strandssolver/test/data/: Strands_ Uncover words. - The New York Times - partial solve.html  filenames.py  filepaths.py
strandssolver/test/stubs/: stubdictionary.py  stubdictionarytrie.py  stubgamestate.py  stubgraph.py  stubhtmlparser.py  stubhtmlreader.py
strandssolver/test/tests/: performance.py
test/stubs/: stubdictionary.py  stubdictionarytrie.py  stubgamestate.py  stubgraph.py  stubhtmlparser.py  stubhtmlreader.py
