[tool.poetry]
name = "strandssolver"
version = "0.1.0"
description = ""
authors = ["LuNoX <maillunox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.4"
lxml = "^5.2.1"
selenium = "^4.20.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
